--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.6.7",
+    "event-source-polyfill": "^1.0.31",
     "firebase": "^10.11.1",
     "js-cookie": "^3.0.5",
     "quill-image-resize": "^3.0.9",
